# okoansml

./: Makefile  README.md  okoansml.opam
solutions/: .merlin  alphabetcipher.ml  basic.ml  basic.mli  bowlinggame.ml  cardgamewar.ml  doublets.ml  foxgoosecorn.ml  jbuild  magicnumber.ml  mazesolver.ml  sumgrid.ml  wordlist.ml
tests/: .merlin  jbuild  test.ml  testalphabetcipher.ml  testbasic.ml  testbowlinggame.ml  testcardgamewar.ml  testdoublets.ml  testfoxgoosecorn.ml  testmagicnumber.ml  testmazesolver.ml  testsumgrid.ml
